--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^15.1.0",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0-alpha.1",
+    "react-router-dom": "^5.1.2",
     "redux": "^3.5.2",
     "redux-promise-middleware": "^3.0.0",
     "redux-thunk": "^2.0.1",
