--- a/package.json
+++ b/package.json
@@ -31,20 +31,20 @@
     "webpack": "^1.13.0"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "bootstrap": "^4.1.3",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
     "css-toggle-switch": "^4.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
-    "firebase": "^7.3.0",
+    "firebase": "^7.15.1",
     "lodash": "^4.12.0",
     "react": "^15.1.0",
     "react-redux": "^4.4.5",
-    "react-router": "^3.0.0-alpha.1",
-    "react-router-dom": "^5.1.2",
+    "react-router": "^3.2.6",
+    "react-router-dom": "^5.2.0",
     "redux": "^3.5.2",
     "redux-promise-middleware": "^3.0.0",
     "redux-thunk": "^2.0.1",
-    "webpack-dev-server": "^3.9.0",
+    "webpack-dev-server": "^3.11.0",
     "yeticss": "^7.3.0"
   }
 }
